# 2022-2-UnBoard

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  UserStory.md  VESTUNB_23 .xlsx  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
Dashboard/: buscarCurso.py  grafico.py  searchBar.py
assets/: 108282056.jfif
back-end/: autostart.sh
backend/: .gitignore  deactivate.sh  pyproject.toml  search_bar.py
backend/Dashboard/: altera.py  buscarCurso.py  grafico.py  leituraPlanilha.py
backend/app/: app.py  search_bar.py
backend/app/aquisicao/: base_etl.py
backend/dashboard/: altera.py  buscarCurso.py  data.json  grafico.py
backend/parser/: base_etl.py  vestunt_etl.py
backend/parser/utils/: web.py
backend/parser/vest/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
backend/parser/vest/spiders/: base_spider.py  pdf_spider.py  vest_spider.py
backend/tests/: test_search.py
backend/utils/: search_bar.py
backend/utils/databases/: vest_23.txt
databases/: VESTUNB_15_.xlsx  VESTUNB_16.xlsx  VESTUNB_17.xlsx  VESTUNB_18.xlsx  VESTUNB_19.xlsx  VESTUNB_22.xlsx  chooser.db
docs/: Protótipos  Protótipos.md  UserStory.md  index.html  style.css
landingPage/: UserStory.md  index.html  style.css
pdfs/: VESTUNB_15.xlsx  VESTUNB_16.xlsx  VESTUNB_17.xlsx  VESTUNB_18.xlsx  VESTUNB_19.xlsx  VESTUNB_22.xlsx  VESTUNB_23-page-1-table-1.md  VESTUNB_23.db  VESTUNB_23.xlsx
scripts/: depslinux.sh  depsmac.sh
spikes/: camelot-test.py  campus.py  chooser.py  (+4 more)
(+59 files in other folders)
