[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["frmiza <mizzaelsantos1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pandas = "^1.5.3"
selenium = "^4.8.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
tox = "^4.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
