[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["frmiza <mizzaelsantos1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
tox = "^4.3.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
